01-18-2025 WEB DESIGN REVIEW ACTIVITY | TALADTAD

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css"/>
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>This is my Website</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur aliquid tempore labore inventore repellendus eligendi, quia sequi tenetur! Quibusdam aliquam, tempora odit ipsa ratione harum reiciendis fuga accusamus eligendi!</p>
-            </div>
-        </div>
-        <div class="row">
-            <p><a href="test/about.html">About Me</a></p>
-        </div>
+    <form action="">
+        <input type="text" placeholder="Email or Phone Number"/><br/>
+        <input type="password" placeholder="Password"/><br/>
+        <button type="submit">Log In</button><br>
+        <a href="" class="f-pws">Forget Password</a><br>
+        <div class="line"></div><br>
+        <button class="bnt2">Create New Account</button>
+    </form>
+
+    <div class="f-container">
+        <img src="https://scontent.fmnl31-1.fna.fbcdn.net/v/t1.15752-9/472782400_1163193361892054_868747918307777603_n.png?_nc_cat=105&ccb=1-7&_nc_sid=9f807c&_nc_ohc=sTf_Aw8ixSoQ7kNvgGq0Il_&_nc_zt=23&_nc_ht=scontent.fmnl31-1.fna&oh=03_Q7cD1gHpsqLZOrHmtQYXg4wfgLjhYYSPv-NooCjQgfk5_0yycA&oe=67B2BE5A" alt="redbook">
+        <p>Meet each other's eyes around the world on Redbook.</p>
+    </div>
+
+    <div class="sub-link">
+        <h3><a href="">Create a page</a> for a celebrity, company, or musician.</h3>
     </div>
 </body>
 </html>
