Info changed to facts

--- a/TS1/index.html
+++ b/TS1/index.html
@@ -21,7 +21,7 @@
             </td>
             <td colspan="2">
                 <p class="name"><b>Clariz Margaret R. Taladtad</b></p>
-                <p class="title">Web Designer & Developer</p>
+                <p class="title">FEU Institute of Technology Student</p>
             </td>
         </tr>
 
@@ -55,7 +55,7 @@
                     <div class="underline"></div>
                     <p>
                         <b>Name:</b> Clariz Margaret R. Taladtad<br>
-                        <b>Age:</b> 24<br>
+                        <b>Age:</b> 19<br>
                         <b>Gender:</b> Female<br>
                         <b>Nationality:</b> Filipino<br>
                         <b>Location:</b> Philippines<br>
@@ -74,30 +74,31 @@
                 <h3>Education</h3>
                 <div class="underline"></div>
                 <p>
-                    <b>Bachelor's Degree in Information Technology</b><br>
-                    2018 - 2024 FEU Institute of Technology<br><br>
-                    <b>Master in Software Engineering</b><br>
-                    2025 - 2028 Massachusetts Institute of Technology
+                    <b>Senior High School Graduate</b><br>
+                    2021 - 2023 Sta. Elena High School
+                    <b>Currently Studying : BS in Information Technology</b><br>
+                    2023 - 2028 FEU Institute of Technology<br><br>
+    
                 </p>
                     <h3>Projects</h3>
                     <div class="underline"></div>
                     <ul>
-                        <li>Valorant</li>
-                        <li>Riot Games</li>
-                        <li>Genshin Impact</li>
-                        <li>Discord Security System</li>
-                        <li>Dior Website</li>
+                        <li>Kaosumi Online Shop</li>
+                        <li>An online business of my own that provides</li>
+                        <li>customers discounted legally purchased game credits.</li>
+                        <li>Involves creating new ideas, customer service,</li>
+                        <li>social media engagement, advertising, and marketing.</li>
                     </ul>
                 </div>
                 <div class="section">
                     <h3>Skills</h3>
                     <div class="underline"></div>
                     <ul>
-                        <li>Game Developing</li>
-                        <li>Web Design</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Python</li>
-                        <li>Javascript</li>
+                        <li>Graphic Design</li>
+                        <li>Trend Awareness</li>
+                        <li>Social Media Management</li>
+                        <li>Project Management</li>
+                        <li>Basic HTML / CSS</li>
                     </ul>
                 </div>
             </div>
@@ -108,7 +109,7 @@
             <img class="footer-img" src="https://i.pinimg.com/736x/20/f4/2f/20f42fc424591d0051d1927983389226.jpg">
         </td>
     </tr>
-    
+
 </div>
 </table>
 
