--- a/TS1/index.html
+++ b/TS1/index.html
@@ -51,7 +51,7 @@
                         </tr>
                     </table>
 
-                    <h3>About Me</h3>
+                    <br><br><h3>About Me</h3>
                     <div class="underline"></div>
                     <p>
                         <b>Name:</b> Clariz Margaret R. Taladtad<br>
@@ -75,23 +75,23 @@
                 <div class="underline"></div>
                 <p>
                     <b>Senior High School Graduate</b><br>
-                    2021 - 2023 Sta. Elena High School
+                    2021 - 2023 Sta. Elena High School</br><br>
                     <b>Currently Studying : BS in Information Technology</b><br>
-                    2023 - 2028 FEU Institute of Technology<br><br>
+                    2023 - 2028 FEU Institute of Technology
     
                 </p>
-                    <h3>Projects</h3>
+                <br><h3>Projects</h3>
                     <div class="underline"></div>
                     <ul>
-                        <li>Kaosumi Online Shop</li>
+                        <li><b>Kaosumi Online Shop</b><br></li>
                         <li>An online business of my own that provides</li>
-                        <li>customers discounted legally purchased game credits.</li>
+                        <li>discounted legally purchased game credits.</li>
                         <li>Involves creating new ideas, customer service,</li>
-                        <li>social media engagement, advertising, and marketing.</li>
+                        <li>social media engagement, advertising, & marketing.</li>
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>Skills</h3>
+                    <br><h3>Skills</h3>
                     <div class="underline"></div>
                     <ul>
                         <li>Graphic Design</li>
