--- a/webdesreview/index.html
+++ b/webdesreview/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css"/>
-    <title>Document</title>
+    <title>Web Design Review Activity</title>
 </head>
 <body>
     <form action="">
@@ -17,7 +17,7 @@
     </form>
 
     <div class="f-container">
-        <img src="https://scontent.fmnl31-1.fna.fbcdn.net/v/t1.15752-9/472782400_1163193361892054_868747918307777603_n.png?_nc_cat=105&ccb=1-7&_nc_sid=9f807c&_nc_ohc=sTf_Aw8ixSoQ7kNvgGq0Il_&_nc_zt=23&_nc_ht=scontent.fmnl31-1.fna&oh=03_Q7cD1gHpsqLZOrHmtQYXg4wfgLjhYYSPv-NooCjQgfk5_0yycA&oe=67B2BE5A" alt="redbook">
+        <img src="https://scontent.fmnl30-2.fna.fbcdn.net/v/t1.15752-9/476496927_928590982811628_8062841033762783240_n.png?_nc_cat=109&ccb=1-7&_nc_sid=0024fc&_nc_ohc=6407Y6hZrZgQ7kNvgEkujmj&_nc_oc=Adgnie1pzXK8w8jfs-Hul3PvY-Xh_4ROXp8RpaBXNqHI2VW7AZv6_p4Xt6RFq16yYOc&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl30-2.fna&oh=03_Q7cD1gG8kBjjxyVei3BiSxoWTeApwBQjG8h79Uy9iEsnPznWPQ&oe=67D95C3C" alt="redbook">
         <p>Meet each other's eyes around the world on Redbook.</p>
     </div>
 
